# models/user.js
@@ -3,6 +3,8 @@ const { handleMongooseError } = require('../helpers');
 const Joi = require('joi');
 
 const emailRegexp = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;
+const dateRegexp = /^(?:(?:0[1-9]|[12][0-9]|3[01])\/(?:0[1-9]|1[0-2])\/(?:19|20)\d\d)?$/;
+const phoneRegexp = /^38\s\(\d{3}\)\s\d{3}\s\d{2}\s\d{2}$/;
 
 const userSchema = new Schema(
   {
@@ -28,6 +30,18 @@ const userSchema = new Schema(
       type: String,
       required: true,
     },
+    phone: {
+      type: String,
+      default: null,
+    },
+    skype: {
+      type: String,
+      default: null,
+    },
+    birthday: {
+      type: String,
+      default: null,
+    },
     verify: {
       type: Boolean,
       default: true,
@@ -52,6 +66,14 @@ const loginSchema = Joi.object({
   password: Joi.string().min(6).required(),
 });
 
+const updateUserSchema = Joi.object({
+  name: Joi.string().required(),
+  phone: Joi.string().pattern(phoneRegexp).optional(),
+  skype: Joi.string().optional(),
+  email: Joi.string().pattern(emailRegexp).required(),
+  birthday: Joi.string().pattern(dateRegexp).optional(),
+});
+
 const emailSchema = Joi.object({
   email: Joi.string().pattern(emailRegexp).required(),
 });
@@ -60,6 +82,7 @@ const schemas = {
   registerSchema,
   loginSchema,
   emailSchema,
+  updateUserSchema,
 };
 
 const User = model('user', userSchema);
